Interface e animação do Jogo da Memória

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,8 @@ flutter:
     - assets/images/sistemaDigestorioImagem.png
     - assets/images/jogoMemoria.png
     - assets/images/quiz.png
+    - assets/images/memoria.png
+    - assets/images/boca.png
+    - assets/images/estomago.png
+    - assets/images/figado.png
+    - assets/images/intestinos.png
