--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,3 +32,4 @@ flutter:
     - assets/images/estomago.png
     - assets/images/figado.png
     - assets/images/intestinos.png
+    - assets/images/pancreas.png
