--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,4 +43,5 @@ flutter:
     - assets/videos/video_conteudo.mp4
     - assets/videos/tutorial_memoria.mp4
     - assets/videos/tutorial_quiz.mp4
+    - assets/videos/tutorial_caca_orgao.mp4
     - assets/images/pancreas.png
